--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,10 @@ yarn.lock
 
 # Environment variables
 .env
+.env.local
+.env.development
+.env.production
+.env.test
 
 # Logs
 logs/
@@ -31,4 +35,8 @@ coverage/
 # Build
 dist/
 build/
+
+# Documentation (generated)
+*.md
+!README.md
 
