--- a/react-movie-master/.env
+++ b/react-movie-master/.env
@@ -1,8 +1,11 @@
-# TMDB API Key
+
 REACT_APP_TMDB_API_KEY=086cfe05dd16828e37291d2f37293a38
 
-# Razorpay Payment Gateway
+
+REACT_APP_API_URL=http://localhost:5001/api
+
+
 REACT_APP_RAZORPAY_KEY_ID=rzp_test_RceQBtKl3hh2hx
-x
-# Clerk Authentication (React 18 compatible)
+
+
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_ZmxleGlibGUtdG9ydG9pc2UtMi5jbGVyay5hY2NvdW50cy5kZXYk
