--- a/react-movie-master/.gitignore
+++ b/react-movie-master/.gitignore
@@ -14,10 +14,18 @@
 # misc
 .DS_Store
 
+# Environment variables
+.env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Documentation (generated)
+*.md
+!README.md
